cmake_minimum_required(VERSION 3.12.0 FATAL_ERROR)
# target_link_libraries for object targets

add_library(
  irods_server_api
  OBJECT
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rs_atomic_apply_acl_operations.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rs_atomic_apply_metadata_operations.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rs_data_object_finalize.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rs_get_delay_rule_info.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rs_get_file_descriptor_info.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rs_get_grid_configuration_value.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rs_register_physical_path.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rs_replica_close.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rs_replica_open.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rs_set_delay_server_migration_info.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rs_set_grid_configuration_value.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rs_touch.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsAuthCheck.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsAuthPluginRequest.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsAuthRequest.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsAuthResponse.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsBulkDataObjPut.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsBulkDataObjReg.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsChkNVPathPerm.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsChkObjPermAndStat.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsClientHints.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsCloseCollection.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsCollCreate.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsCollRepl.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsDataCopy.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsDataGet.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsDataObjChksum.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsDataObjClose.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsDataObjCopy.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsDataObjCreate.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsDataObjCreateAndStat.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsDataObjGet.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsDataObjLock.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsDataObjLseek.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsDataObjOpen.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsDataObjOpenAndStat.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsDataObjPhymv.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsDataObjPut.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsDataObjRead.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsDataObjRename.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsDataObjRepl.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsDataObjRsync.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsDataObjTrim.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsDataObjTruncate.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsDataObjUnlink.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsDataObjWrite.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsDataPut.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsEndTransaction.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsExecCmd.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsExecMyRule.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsExecRuleExpression.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsFileChksum.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsFileChmod.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsFileClose.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsFileClosedir.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsFileCreate.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsFileGet.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsFileGetFsFreeSpace.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsFileLseek.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsFileMkdir.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsFileOpen.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsFileOpendir.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsFilePut.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsFileRead.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsFileReaddir.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsFileRename.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsFileRmdir.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsFileStageToCache.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsFileStat.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsFileSyncToArch.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsFileTruncate.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsFileUnlink.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsFileWrite.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsGenQuery.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsGeneralAdmin.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsGeneralRowInsert.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsGeneralRowPurge.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsGeneralUpdate.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsGetHierFromLeafId.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsGetHierarchyForResc.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsGetHostForGet.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsGetHostForPut.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsGetLimitedPassword.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsGetMiscSvrInfo.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsGetRemoteZoneResc.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsGetRescQuota.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsGetTempPassword.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsGetTempPasswordForOther.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsIESClientHints.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsL3FileGetSingleBuf.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsL3FilePutSingleBuf.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsModAVUMetadata.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsModAccessControl.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsModColl.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsModDataObjMeta.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsObjStat.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsOpenCollection.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsOprComplete.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsPamAuthRequest.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsPhyPathReg.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsProcStat.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsQuerySpecColl.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsReadCollection.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsRegColl.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsRegDataObj.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsRegReplica.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsRmColl.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsRuleExecDel.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsRuleExecMod.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsRuleExecSubmit.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsServerReport.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsSimpleQuery.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsSpecificQuery.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsSslEnd.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsSslStart.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsStreamClose.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsStreamRead.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsStructFileBundle.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsStructFileExtAndReg.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsStructFileExtract.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsStructFileSync.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsSubStructFileClose.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsSubStructFileClosedir.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsSubStructFileCreate.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsSubStructFileGet.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsSubStructFileLseek.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsSubStructFileMkdir.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsSubStructFileOpen.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsSubStructFileOpendir.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsSubStructFilePut.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsSubStructFileRead.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsSubStructFileReaddir.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsSubStructFileRename.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsSubStructFileRmdir.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsSubStructFileStat.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsSubStructFileTruncate.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsSubStructFileUnlink.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsSubStructFileWrite.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsSyncMountedColl.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsTicketAdmin.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsUnbunAndRegPhyBunfile.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsUnregDataObj.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsUserAdmin.cpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/src/rsZoneReport.cpp"
)
target_link_libraries(
  irods_server_api
  PUBLIC
  nlohmann_json::nlohmann_json
  irods_common
  irods_plugin_dependencies
  PRIVATE
  "${IRODS_EXTERNALS_FULLPATH_AVRO}/lib/libavrocpp.so"
  "${IRODS_EXTERNALS_FULLPATH_BOOST}/lib/libboost_chrono.so"
  "${IRODS_EXTERNALS_FULLPATH_BOOST}/lib/libboost_filesystem.so"
  "${IRODS_EXTERNALS_FULLPATH_BOOST}/lib/libboost_thread.so"
  "${IRODS_EXTERNALS_FULLPATH_BOOST}/lib/libboost_regex.so"
  "${IRODS_EXTERNALS_FULLPATH_BOOST}/lib/libboost_system.so"
  "${IRODS_EXTERNALS_FULLPATH_FMT}/lib/libfmt.so"
  "${IRODS_EXTERNALS_FULLPATH_NANODBC}/lib/libnanodbc.so"
  "${IRODS_EXTERNALS_FULLPATH_ZMQ}/lib/libzmq.so"
  OpenSSL::SSL
  OpenSSL::Crypto
  ${CMAKE_DL_LIBS}
  rt
)
target_include_directories(
  irods_server_api
  PUBLIC
  "$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>"
  "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
  "$<BUILD_INTERFACE:${CMAKE_IRODS_SOURCE_DIR}/plugins/api/include>"
  "$<BUILD_INTERFACE:${CMAKE_IRODS_SOURCE_DIR}/server/core/include>"
  "$<BUILD_INTERFACE:${CMAKE_IRODS_SOURCE_DIR}/lib/administration/user/include>"
  "$<BUILD_INTERFACE:${CMAKE_IRODS_SOURCE_DIR}/lib/administration/zone/include>"
  PRIVATE
  "${IRODS_EXTERNALS_FULLPATH_AVRO}/include"
  "${IRODS_EXTERNALS_FULLPATH_BOOST}/include"
  "${IRODS_EXTERNALS_FULLPATH_CPPZMQ}/include"
  "${IRODS_EXTERNALS_FULLPATH_FMT}/include"
  "${IRODS_EXTERNALS_FULLPATH_NANODBC}/include"
  "${IRODS_EXTERNALS_FULLPATH_ZMQ}/include"
  "${IRODS_EXTERNALS_FULLPATH_SPDLOG}/include"
)
target_compile_definitions(
  irods_server_api
  PUBLIC
  ${IRODS_COMPILE_DEFINITIONS_PUBLIC}
  PRIVATE
  ${IRODS_COMPILE_DEFINITIONS_PRIVATE}
  ENABLE_RE
  RODS_CLERVER
  IRODS_ENABLE_SYSLOG
)
set_target_properties(irods_server_api PROPERTIES INTERFACE_POSITION_INDEPENDENT_CODE TRUE)
set_target_properties(irods_server_api PROPERTIES POSITION_INDEPENDENT_CODE TRUE)

install(
  FILES
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rs_atomic_apply_acl_operations.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rs_atomic_apply_metadata_operations.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rs_data_object_finalize.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rs_get_delay_rule_info.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rs_get_file_descriptor_info.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rs_get_grid_configuration_value.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rs_register_physical_path.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rs_replica_open.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rs_replica_close.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rs_set_delay_server_migration_info.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rs_set_grid_configuration_value.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rs_touch.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsAuthCheck.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsAuthPluginRequest.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsAuthRequest.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsAuthResponse.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsAuthenticate.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsBulkDataObjPut.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsBulkDataObjReg.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsChkNVPathPerm.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsChkObjPermAndStat.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsClientHints.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsCloseCollection.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsCollCreate.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsCollRepl.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsDataCopy.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsDataGet.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsDataObjChksum.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsDataObjClose.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsDataObjCopy.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsDataObjCreate.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsDataObjCreateAndStat.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsDataObjGet.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsDataObjLock.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsDataObjLseek.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsDataObjOpen.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsDataObjOpenAndStat.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsDataObjPhymv.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsDataObjPut.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsDataObjRead.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsDataObjRename.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsDataObjRepl.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsDataObjRsync.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsDataObjTrim.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsDataObjTruncate.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsDataObjUnlink.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsDataObjWrite.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsDataPut.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsEndTransaction.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsExecCmd.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsExecMyRule.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsExecRuleExpression.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsFileChksum.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsFileChmod.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsFileClose.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsFileClosedir.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsFileCreate.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsFileGet.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsFileGetFsFreeSpace.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsFileLseek.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsFileMkdir.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsFileOpen.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsFileOpendir.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsFilePut.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsFileRead.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsFileReaddir.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsFileRename.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsFileRmdir.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsFileStageToCache.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsFileStat.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsFileSyncToArch.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsFileTruncate.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsFileUnlink.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsFileWrite.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsGenQuery.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsGeneralAdmin.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsGeneralRowInsert.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsGeneralRowPurge.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsGeneralUpdate.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsGetHierFromLeafId.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsGetHierarchyForResc.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsGetHostForGet.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsGetHostForPut.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsGetLimitedPassword.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsGetMiscSvrInfo.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsGetRemoteZoneResc.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsGetRescQuota.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsGetTempPassword.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsGetTempPasswordForOther.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsIESClientHints.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsL3FileGetSingleBuf.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsL3FilePutSingleBuf.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsModAVUMetadata.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsModAccessControl.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsModColl.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsModDataObjMeta.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsObjStat.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsOpenCollection.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsOprComplete.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsPamAuthRequest.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsPhyPathReg.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsProcStat.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsQuerySpecColl.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsReadCollection.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsRegColl.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsRegDataObj.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsRegReplica.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsRmColl.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsRuleExecDel.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsRuleExecMod.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsRuleExecSubmit.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsServerReport.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsSimpleQuery.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsSpecificQuery.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsSslEnd.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsSslStart.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsStreamClose.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsStreamRead.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsStructFileBundle.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsStructFileExtAndReg.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsStructFileExtract.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsStructFileSync.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsSubStructFileClose.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsSubStructFileClosedir.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsSubStructFileCreate.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsSubStructFileGet.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsSubStructFileLseek.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsSubStructFileMkdir.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsSubStructFileOpen.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsSubStructFileOpendir.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsSubStructFilePut.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsSubStructFileRead.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsSubStructFileReaddir.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsSubStructFileRename.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsSubStructFileRmdir.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsSubStructFileStat.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsSubStructFileTruncate.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsSubStructFileUnlink.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsSubStructFileWrite.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsSyncMountedColl.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsTicketAdmin.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsUnbunAndRegPhyBunfile.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsUnregDataObj.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsUserAdmin.hpp"
  "${CMAKE_CURRENT_SOURCE_DIR}/include/irods/rsZoneReport.hpp"
  DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/irods"
  COMPONENT ${IRODS_PACKAGE_COMPONENT_DEVELOPMENT_NAME}
)
